--- a/hadoop-hive.env
+++ b/hadoop-hive.env
@@ -1,5 +1,5 @@
 HIVE_SITE_CONF_javax_jdo_option_ConnectionURL=jdbc:mysql://mysql:3306/metastore?createDatabaseIfNotExist=true
-HIVE_SITE_CONF_javax_jdo_option_ConnectionDriverName=com.mysql.jdbc.Driver
+HIVE_SITE_CONF_javax_jdo_option_ConnectionDriverName=com.mysql.cj.jdbc.Driver
 HIVE_SITE_CONF_javax_jdo_option_ConnectionUserName=root
 HIVE_SITE_CONF_javax_jdo_option_ConnectionPassword=123456
 HIVE_SITE_CONF_datanucleus_autoCreateSchema=false
