--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,14 +43,21 @@ services:
       SERVICE_PRECONDITION: "namenode:50070 datanode:50075"
     env_file:
       - ./hadoop-hive.env
+    ports:
+      - "8030:8030"
+      - "8031:8031"
+      - "8032:8032"
+      - "8088:8088"
 
-  nodemanager1:
+  nodemanager:
     image: bde2020/hadoop-nodemanager:2.0.0-hadoop2.7.4-java8
     container_name: nodemanager
     environment:
       SERVICE_PRECONDITION: "namenode:50070 datanode:50075 resourcemanager:8088"
     env_file:
       - ./hadoop-hive.env
+    ports:
+      - "8042:8042"
 
   historyserver:
     image: bde2020/hadoop-historyserver:2.0.0-hadoop2.7.4-java8
@@ -61,9 +68,12 @@ services:
       - hadoop_historyserver:/hadoop/yarn/timeline
     env_file:
       - ./hadoop-hive.env
+    ports:
+      - "8188:8188"
 
   hive-server:
     image: bde2020/hive:2.3.2-mysql-metastore
+    container_name: hive-server
     env_file:
       - ./hadoop-hive.env
     environment:
@@ -72,6 +82,7 @@ services:
       - "10000:10000"
   hive-metastore:
     image: bde2020/hive:2.3.2-mysql-metastore
+    container_name: hive-metastore
     env_file:
       - ./hadoop-hive.env
     command: /opt/hive/bin/hive --service metastore
@@ -89,6 +100,7 @@ services:
       - ./hadoop-hive.env
   spark-worker:
     image: bde2020/spark-worker:2.4.0-hadoop2.7
+    container_name: spark-worker
     depends_on:
       - spark-master
     environment:
